small refactoring regarding input namings
